Fixed overflow scrolling that was wiped by merge.

--- a/Office-ProPlus-Deployment/SelfServiceWebDeployment/SelfService/Content/Site.css
+++ b/Office-ProPlus-Deployment/SelfServiceWebDeployment/SelfService/Content/Site.css
@@ -127,7 +127,6 @@ textarea {
     width: 80%;
     height: 80%;
     max-width: none;
-    overflow:auto;
     box-shadow:none;
     border:3px solid #0078D7;
     padding: 10px 15px;
@@ -167,8 +166,8 @@ hr{
 
 .custom-Dialog-inner{
     width:100%;
-    height:auto;
-    /*overflow:auto;*/
+    height:75%;
+    overflow:auto;
 
 }
 
